name:                ptf
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/cpichard/ptf
license:             BSD3
license-file:        LICENSE
author:              cpichard
maintainer:          example@example.com
copyright:           2016 cpichard 
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable bbtest
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       BBTests
  ghc-options:         -threaded 
  build-depends:       base
                     , HTF
                     , process
                     , yaml
                     , aeson
                     , directory
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cpichard/ptf
